--- a/drp_internet/core.html
+++ b/drp_internet/core.html
@@ -13,16 +13,17 @@
 <script src="core.js"></script>
 
 <div class ="navbar">
-
-    <button onclick="goBack()" class="previous">&#8592;</button>
-    <button onclick="goForward()" class="next">&#8594;</button>
+    <div class ="wrapper">
+        <img src="img/ads/forward.png" onclick="goBack()" class="previous hover">
+        <img src="img/ads/back.png" onclick="goForward()" class="next hover">
+    </div>  
+    <img src ="img/ads/exit.png" class="exitbtn">
     <p class="link">drpnet://homepage.fivem</p>
-
 </div>
 
 <div class="container">
     <div class ="logo-container">
-        <img src = "info.png" class = "info">
+        <img src = "img/categories/info.png" class = "info">
         <div class = "search-wrap">
             <div class="search">
                 <input type="text" class="searchTerm" placeholder="Search">
@@ -35,19 +36,19 @@
     <hr class = "dividernav">
     <div class = "categories">
         <a class="bank" href="#">
-            <img src = "bank.png" class = "bankpng">
+            <img src = "img/categories/bank.png" class = "bankpng">
             <p>Access bank &<br> stocks services</p>
         </a><a class="services" href="#">
-            <img src ="services.png" class = "servicespng">
+            <img src ="img/categories/services.png" class = "servicespng">
             <p>Jobs &<br>Services</p>
         </a><a class = "media" href="#">
-            <img src ="media.png" class = "mediapng">
+            <img src ="img/categories/media.png" class = "mediapng">
             <p>Media & <br>Entertainment</p>
         </a><a class = "shop" href="#">
-            <img src = "shop.png" class="shoppng">
+            <img src = "img/categories/shop.png" class="shoppng">
             <p>Shops &<br>Premium</p>
         </a></a><a class = "travel" href="#">
-            <img src = "travel.png" class="travelpng">
+            <img src = "img/categories/travel.png" class="travelpng">
             <p>Travel &<br>Transport</p>
         </a>
     </div>
@@ -62,16 +63,16 @@
         </a>
         <a class="frame-sponsored">
             <h1>SPONSORED</h1>
-            <div class ="magazin"></div>
+            <div class ="banksp"></div>
         </a>
     </div>
     <div class = "content">
-        <a class = "ad 1" href="#"></a>
-        <a class = "ad 2" href="#"></a>
-        <a class = "ad 3" href="#"></a>
-        <a class = "ad 4" href="#"></a>
-        <a class = "ad 5" href="#"></a>
-        <a class = "ad 6" href="#"></a>
+        <a style="background-image: url('img/ads/LSMotorbikes.png');" class = "ad 1" href="#"></a>
+        <a style="background-image: url('img/ads/NorthAuto.png');" class = "ad 2" href="#"></a>
+        <a style="background-image: url('img/ads/SupAirways.png');" class = "ad 3" href="#"></a>
+        <a style="background-image: url('img/ads/OldieGoldie.png');" class = "ad 4" href="#"></a>
+        <a style="background-image: url('img/ads/vip.png');" class = "ad 5" href="#"></a>
+        <a style="background-image: url('img/ads/dock.png');" class = "ad 6" href="#"></a>
     </div>
 </div> 
 
