--- a/drp_internet/html/core.html
+++ b/drp_internet/html/core.html
@@ -52,18 +52,18 @@
             <p>Travel &<br>Transport</p>
         </a>
     </div>
-    <div class = "content-sponsor"> 
-        <a class= "frame-sponsored dealership">
+    <div class = "content-sponsor">
+        <a class= "frame-sponsored" href="#" style="color:white">
             <h1>SPONSORED</h1>
             <div class="dealership"></div>
         </a>
-        <a class = "frame-sponsored">
+        <a class = "frame-sponsored" href="#" style="color:white">
             <h1>SPONSORED</h1>
             <div class ="appartments"></div>
         </a>
-        <a class="frame-sponsored">
+        <a class="frame-sponsored" href="flecca/main.html" style="color:white">
             <h1>SPONSORED</h1>
-            <div class ="banksp"></div>
+            <div class ="banksp" ></div>
         </a>
     </div>
     <hr class = "dividercontent">
