--- a/drp_internet/html/core.html
+++ b/drp_internet/html/core.html
@@ -56,10 +56,12 @@
         <a class= "frame-sponsored" href="#" style="color:white">
             <h1>SPONSORED</h1>
             <div class="dealership"></div>
+            <p class = "unavailable-sp">Coming soon...</p>
         </a>
         <a class = "frame-sponsored" href="#" style="color:white">
             <h1>SPONSORED</h1>
             <div class ="appartments"></div>
+            <p class = "unavailable-sp">Coming soon...</p>
         </a>
         <a class="frame-sponsored" href="flecca/main.html" style="color:white">
             <h1>SPONSORED</h1>
@@ -68,12 +70,12 @@
     </div>
     <hr class = "dividercontent">
     <div class = "content">
-        <a style="background-image: url('img/ads/LSMotorbikes.png');" class = "ad 1" href="#"></a>
-        <a style="background-image: url('img/ads/NorthAuto.png');" class = "ad 2" href="#"></a>
-        <a style="background-image: url('img/ads/SupAirways.png');" class = "ad 3" href="#"></a>
-        <a style="background-image: url('img/ads/OldieGoldie.png');" class = "ad 4" href="#"></a>
-        <a style="background-image: url('img/ads/vip.png');" class = "ad 5" href="#"></a>
-        <a style="background-image: url('img/ads/dock.png');" class = "ad 6" href="#"></a>
+        <a style="background-image: url('img/ads/LSMotorbikes.png');" class = "ad 1" href="#"><p class = "unavailable">Coming soon...</p></a>
+        <a style="background-image: url('img/ads/NorthAuto.png');" class = "ad 2" href="#"><p class = "unavailable">Coming soon...</p></a>
+        <a style="background-image: url('img/ads/SupAirways.png');" class = "ad 3" href="#"><p class = "unavailable">Coming soon...</p></a>
+        <a style="background-image: url('img/ads/OldieGoldie.png');" class = "ad 4" href="#"><p class = "unavailable">Coming soon...</p></a>
+        <a style="background-image: url('img/ads/vip.png');" class = "ad 5" href="#"><p class = "unavailable">Coming soon...</p></a>
+        <a style="background-image: url('img/ads/dock.png');" class = "ad 6" href="#"><p class = "unavailable">Coming soon...</p></a>
     </div>
 </div> 
 
