--- a/drp_internet/html/flecca/main.html
+++ b/drp_internet/html/flecca/main.html
@@ -30,18 +30,16 @@
         <img src="img/logo.png" class="logo">
         <h3 id='log' style="display: none;">Logged in as:</h3>
         <p id = 'logp'style="display: none;">Account balance:</p>
-        <p id='logp2'style="display:none;">Cash:</p>
     </div>
     <div class = "fadingshit"></div>
     <button id="back" onclick="replace('replace2','replace1');hide('back')" style="display: none;">&#171;Back</button>
     <div class ="replace" id="replace">
         <h1 class="wlcm">Welcome to <span style ="color:green">Flecca</span> Bank!</h1>
-        <button onclick="replace('replace','replace1');display('log','logp','logp2');" class = "auth btn">Authenticate</button>
+        <button onclick="replace('replace','replace1');display('log','logp');" class = "auth btn">Authenticate</button>
     </div>
     <div id="replace1" class ="replace" style="display: none;">
         <h1>Choose a service</h1>
-        <button class ="deposit btn" onclick="replace('replace1','replace2');display('back');">Deposit</button>
-        <button class ="withdraw btn" onclick="replace('replace1','replacewithdraw')">Withdraw</button>
+        <button class ="deposit btn" onclick="replace('replace1','replace2');display('back');">Transfer</button>
         <button class ="logs btn">Transaction logs</button>
     </div>
     <div id="replace2" class="replace" style="display:none;">
@@ -50,17 +48,21 @@
             <button class="dep1 left btn">250</button>
             <button class="dep2 left btn">1000</button>
             <button class="dep3 left btn">5000</button>
-            <button class="depmax right btn">Deposit all</button>
-            <button class="depcustom right btn">Custom amount</button>
+            <button class="depmax right btn">Transfer all</button>
+            <button class="depcustom right btn"onclick="replace('replace2','replacetransfer1')">Custom amount</button>
         </div>
     </div>
-    <div id="replacewithdraw" class = "replace" style="display:none;">
-        <h1>Introduce amount</h1>
-        <form>
-            <input class ='input'type="number" id="withdrawamount"> 
+    <div id="replacetransfer1" class = "replace" style="display:none;">
+        <h1>Introduce user ID</h1>
+        <form class = 'form1'>
+            <input class ='input'type="number" name ="userid" id="transferid">
         </form>
-
-    
+        <button onclick="replace('replacetransfer1','replacetransfer2')" id='confirm1' class='confirm btn'>Confirm</button>
+    </div>
+    <div id="replacetransfer2" class="replace" style="display: none;">
+        <h1>Amount to be transfered</h1>
+        <input class ='input1' type="number" id="transferamount">
+        <button class='confirm btn'>Submit</button>
     </div>
 
 </div>
